# VideoSummarizerGemini

./: README.md  app.py  models.py  pyproject.toml  routes.py
static/css/: custom.css
static/js/: main.js
templates/: base.html  index.html  preview.html
utils/: cache.py  gemini.py  youtube.py
